feat #25: 엔드포인트 수정, image 예외처리 수정
- ReportDetailResponse 엔드포인트에 reports가 중복되어 삭제함
- image 저장에 실패하더라도 image를 제외한 report가 저장되도록 함